added scope to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capsule-js",
+  "name": "@eimfach/capsule-js",
   "version": "0.8.1",
   "description": "capsule.js - micro lib implementing an object creation paradigm for encapsulation",
   "main": "capsule.js",
