--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/*.js"
+    "test": "mocha test/*.js",
+    "coveralls": "gulp"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,10 @@
   "homepage": "https://github.com/eimfach/capsule-js",
   "devDependencies": {
     "chai": "^1.10.0",
+    "gulp": "^3.8.11",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-istanbul": "^0.9.0",
+    "gulp-mocha": "^2.0.1",
     "mocha": "^2.0.1",
     "q": "^1.4.0"
   }
