--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha test/*.js",
-    "coveralls": "gulp"
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info && gulp coveralls && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -29,10 +29,12 @@
   "homepage": "https://github.com/eimfach/capsule-js",
   "devDependencies": {
     "chai": "^1.10.0",
+    "coveralls": "^2.11.2",
     "gulp": "^3.8.11",
     "gulp-coveralls": "^0.1.4",
     "gulp-istanbul": "^0.9.0",
     "gulp-mocha": "^2.0.1",
+    "istanbul": "^0.3.14",
     "mocha": "^2.0.1",
     "q": "^1.4.0"
   }
