--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@eimfach/capsule-js",
+  "name": "frozen-core",
   "version": "0.13.0",
-  "description": "capsule.js - micro lib implementing an object creation paradigm for encapsulation",
-  "main": "capsule.js",
+  "description": "frozen-core.js - micro lib implementing an object creation paradigm for immutable structures",
+  "main": "frozen-core.js",
   "directories": {
     "test": "test"
   },
@@ -12,21 +12,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eimfach/capsule-js.git"
+    "url": "https://github.com/eimfach/frozen-core.git"
   },
   "keywords": [
     "js",
     "javascript",
-    "capsule",
-    "capsule.js",
-    "encapsulation"
+    "frozen",
+    "freeze",
+    "frozen-core.js",
+    "immutable"
   ],
   "author": "Robin Gruenke",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eimfach/capsule-js/issues"
+    "url": "https://github.com/eimfach/frozen-core/issues"
   },
-  "homepage": "https://github.com/eimfach/capsule-js",
+  "homepage": "https://github.com/eimfach/frozen-core",
   "devDependencies": {
     "chai": "^1.10.0",
     "gulp": "^3.8.11",
